Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59878

SVG rasterization issue in QML Canvas

XMLWordPrintable

    • 7d426b622 (dev)

      Hi, I'm struggling to properly render SVG icons into a Canvas item.
      Since icons are small (for me typically 48x48px), I always use the sourceSize property to force a specific rendering size.
      On a Canvas though, it seems the drawImage call completely ignores the rasterization size and somehow scale the original SVG size to the requested one (dw, dh), producing an ugly aliasing effect which makes the usage of the SVG format totally useless.

      Attached a self contained example to reproduce the issue and a screenshot of the result.
      From the left:

      • the original SVG icon as Image item (correct)
      • the same Image item rendered by drawImage (to be honest I expected this to be correct as well, since rasterized data should be provided by Image)
      • the SVG icon loaded with the procedure explained in the documentation, with loadImage and onImageLoaded

      Is there any trick to solve this that I'm not aware of or is there something wrong in the internals ?

        1. canvas_svg.tar.gz
          3 kB
          Massimo Callegari
        2. svg_canvas_issue.png
          20 kB
          Massimo Callegari
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            mcallegari79 Massimo Callegari
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes