Introduce sourceSize parameter to Canvas::loadImage()

Useful when loading scalable image formats like SVG, so they can be
rendered at or about the intended display size. This can yield a
significant quality difference compared to the alternative of loading
at intrinsic size and scaling as pixmap.

[ChangeLog][QtQuick][Canvas] Optional size parameter added to
Canvas::loadImage(). Useful to improve visual quality by rendering
scalable formats like SVG closer to the intended display size.

Fixes: QTBUG-59878
Change-Id: Ib68c5d19c3766b76cebd0d9abf0822c52190688e
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>